<resources>
    <string name="app_name">SimpleCalcApp</string>

    <string name="projectsTitle">プロジェクト一覧</string>
    <string name="newProjectButton">プロジェクト新規作成</string>
    <string name="deleteProjects">プロジェクトを削除</string>

    <string name="projectTitleHint">プロジェクト名</string>
    <string name="mainTitle">簡易計算器サンプル(仮）</string>
    <string name="newButton">計算式を新規作成</string>
    <string name="saveButton">プロジェクトを保存</string>

    <string name="detailTitle">詳細画面</string>
    <string name="inputMemo">メモを入力</string>
    <string name="inputNumber">数値を入力</string>
    <string name="inputSymbol">演算子を入力</string>
    <string name="addPartButton">追加</string>
    <string name="confirmButton">確定</string>

    <string name="detailValidateTitle">入力欄に誤りがあります</string>
    <string name="detailValidateMessage">未入力の項目があります</string>

    <string-array name="symbol_items">
        <item>＋</item>
        <item>－</item>
        <item>×</item>
        <item>÷</item>
    </string-array>
</resources>
