<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainTitle"
        android:textSize="24dp" />
        -->

    <EditText
        android:id="@+id/projectTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/projectTitleHint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/newButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/newButton" />

        <Button
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/saveButton" />

    </LinearLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.example.work.simplecalcapp.MesuredListView
            android:id="@+id/calcList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></com.example.work.simplecalcapp.MesuredListView>

    </ScrollView>



</LinearLayout>
